# MnM-server

./: .env.example  .gitignore  QUICKSTART.md  README.md  SETUP.md  image_map.md  pyproject.toml  requirements.txt  settings.py  setup.sh
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  diary.py  movie.py  ticket.py  user.py
app/core/: config.py
app/db/: base.py  movieandme.db.backup  session.py
app/models/: __init__.py  diary.py  movie.py  ticket.py  token.py  user.py  user_ticket.py
app/schemas/: __init__.py  diary.py  movie.py  ticket.py  user.py
app/services/: auth_service.py  diary_service.py  llm_service.py  movie_service.py  ticket_service.py  user_service.py
scripts/: seed_movies.py
